Fix Tiny Checkbox on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ img#avatar {
 
 /* SEARCH */
 
-input {
+input[type=text], input[type=number] {
 	box-sizing: border-box;
 	width: 100%;
 }
